tui/tests/snapshots/editor_render_snapshots__snap_all_sigil_heading_wraps.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"######\", 3)"
---
 0 |###|
   0..3 fg=Rgb(124, 111, 100) bg=Rgb(40, 40, 40) mods=NONE
 1 |###|
   0..3 fg=Rgb(124, 111, 100) bg=Rgb(40, 40, 40) mods=NONE
