tui/tests/snapshots/editor_render_snapshots__snap_empty_link_alone_on_a_row.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"before\\n[](url)\\nafter\", 80)"
---
 0 |before                                                                          |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 1 |                                                                                |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 2 |after                                                                           |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
