tui/tests/snapshots/editor_render_snapshots__snap_fully_concealed_row_without_the_caret.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted_with_cursor(\"[](url)\\nafter\", 80, (1, 0))"
---
 0 |                                                                                |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 1 |after                                                                           |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
